--- a/documentation.html
+++ b/documentation.html
@@ -34,19 +34,15 @@ download: false
 function fetchTeamId() {
   var container = $('#id-container');
   var url = 'https://slack.com/api/team.info?token='+$("#token").val().replace(/\s+/g, '');
-  $.getJSON(url)
-      .done(function(result, status) {
-            console.log("Done");
-      })
-      .fail(function(result, status) {
-
-            console.log("Fail");
-      })
-      .success(function (result, status) {
-          console.log("Success");
-      })
-      .error(function (result, status) {
-          console.log("Error");
-      });
+  var xhr = new XMLHttpRequest();
+xhr.open('GET', encodeURI('url'));
+xhr.onload = function() {
+    if (xhr.status === 200) {
+        console.log("Success");
     }
+    else {
+        alert('Request failed.  Returned status of ' + xhr.status);
+    }
+};
+xhr.send();
 </script>
