--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 ---
 layout: home
 title: Home
-description: A generic plugin for Rock RMS
+description: Slack Integration for Rock RMS
 download: true
 ---
-<h1>Accurate Address Verification for the UK</h2>
-<p class="lead">Address verification for <a href="http://rockrms.com">Rock RMS</a> using the most accurate data available.</p>
+<h1>Connect Rock to your Team</h2>
+<p class="lead">Slack Integration for <a href="http://rockrms.com">Rock RMS</a>.</p>
 
 <div class="row">
   <div class="col-md-4">
 
     <i class="fa fa-map-marker fa-3x"></i>
-    <h2>Accurate</h2>
-    <p><a href="http://ideal-postcodes.co.uk">Ideal Postcodes</a> uses data updated daily from the Royal Mail Postcode Address File as well as additional data from the ONS and Ordnance Survey.</p>
+    <h2>Workflow Actions</h2>
+    <p>Connect Slack to your Rock workflows to create powerful custom processes specific to your organisation. Check out our list of suggested recipes to see some of the possibilities this opens.</p>
   </div>
   <div class="col-md-4">
     <i class="fa fa-repeat fa-3x"></i>
-    <h2>Regularly Updated</h2>
-    <p>This plugin takes advantages of all of the features of {{site.name}} and is regularly updated to be compatible with new features as they are released.</p>
+    <h2>Keep Rock and Slack in sync</h2>
+    <p>Keep your organisation in sync. Tie your Slack team to your Rock users.</p>
   </div>
   <div class="col-md-4">
     <i class="fa fa-circle-o-notch fa-3x"></i>
